LN Week 02 Journal Project
Added ability to save entries
Added ability to load entries

User entry, prompt, and date are saved to an object

--- a/week02/Journal/Journal.csproj
+++ b/week02/Journal/Journal.csproj
@@ -8,4 +8,9 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentFileFilterBuilder" Version="1.0.1" />
+    <PackageReference Include="System.Windows.Forms.DataVisualization" Version="1.0.0-prerelease.20110.1" />
+  </ItemGroup>
+
 </Project>
