--- a/week07/ExerciseTracking/ExerciseTracking.csproj
+++ b/week07/ExerciseTracking/ExerciseTracking.csproj
@@ -8,4 +8,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="images\" />
+  </ItemGroup>
+
 </Project>
